# zig-bindgen-js

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.zig  config.json  example.js  libflashlight_binding.dylib  node_bindings.zig  package.json  tsconfig.json  zig-bindgen-js.json
cpp/: binding_gen.inl  flashlight_binding.cc  flashlight_binding.h  flashlight_binding.zig
src/: bindings.h  c.zig  config.zig  gen_napi.zig  gen_ts.zig  main.zig  napi_utils.zig  test.zig
test/: boolean.test.ts  numbers.test.ts  object.test.ts  string.test.ts  typedarray.test.ts
wrapper/: index.ts
